# PythonVehicleSimulator

./: .gitignore  LICENSE  README.md  main.py  setup.cfg
classes/: vehicle.py
functions/: __init__.py  control.py  gnc.py  guidance.py  kinematics.py  mainLoop.py  models.py  plotTimeSeries.py
src/python_vehicle_simulator/: __init__.py  control.py  gnc.py  guidance.py  main.py  mainLoop.py  models.py  plotTimeSeries.py
src/python_vehicle_simulator/lib/: __init__.py  actuator.py  control.py  fin.py  gnc.py  guidance.py  mainLoop.py  plotTimeSeries.py
src/python_vehicle_simulator/vehicles/: DSRV.py  ROVzefakkel.py  __init__.py  frigate.py  otter.py  remus100.py  semisub.py  shipClarke83.py  supply.py  tanker.py  torpedo.py
tests/: test_simulate.py
vehicles/: DSRV.py  ROVzefakkel.py  __init__.py  frigate.py  otter.py  semisub.py  shipClarke83.py  supply.py  tanker.py
