[metadata]
name = python_vehicle_simulator
version = 1.0.1
author = T. I. Fossen
author_email = thor.fossen@ntnu.no
description = The Python Vehicle Simulator is a supplement to the Matlab MSS (Marine Systems Simulator) toolbox.
url = https://github.com/cybergalactic/PythonVehicleSimulator
project_urls =
    Bug Tracker = https://github.com/cybergalactic/PythonVehicleSimulator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    matplotlib

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
    
